# icrc7_launchpad

src/icrc7/: Cargo.toml
src/icrc7/src/: archive.rs  candid_file_generator.rs  errors.rs  icrc37_query_method.rs  icrc37_update_method.rs  icrc3_query_method.rs  icrc3_types.rs  icrc7_types.rs  init_method.rs  lib.rs  memory.rs  query_method.rs  state.rs  update_method.rs  utils.rs
src/icrc7_archive/: Cargo.toml
src/icrc7_launchpad/: Cargo.toml
src/icrc7_launchpad/src/: update_method.rs
src/icrc7_types/: Cargo.toml
src/icrc7_types/src/: errors.rs  icrc37_types.rs  icrc3_types.rs  icrc7_types.rs
